test some step2

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,7 @@
 
 <h1>do some diffent</h1>
 <h2>test some step 1</h2>
+<h2>test some step 2</h2>
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
