--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,6 +10,8 @@
 <h1>do some diffent</h1>
 <h2>test some step 1</h2>
 <h2>test some step 2</h2>
+<h2>test some step 3</h2>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
