--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,7 @@
 <h2>test some step 1</h2>
 <h2>test some step 2</h2>
 <h2>test some step 3</h2>
+<h2>test some step 4</h2>
 
 <div class="container">
   <div class="row">
