<h2>test some step 8_test from test</h2>

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,6 +13,7 @@
 <h2>test some step 3</h2>
 <h2>test some step 4</h2>
 <h2>test some step 5 from test</h2>
+<h2>test some step 8_test from test</h2>
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
