--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,6 +14,8 @@
 <h2>test some step 4</h2>
 <h2>test some step 5 from test</h2>
 <h2>test some step 8 from mac</h2>
+<h2>test some step 10 from mac</h2>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
